--- a/OpenCVApplication-VS2015_OCV31_basic/OpenCVApplication.vcxproj
+++ b/OpenCVApplication-VS2015_OCV31_basic/OpenCVApplication.vcxproj
@@ -94,17 +94,45 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BlackBishop.h" />
+    <ClInclude Include="BlackKing.h" />
+    <ClInclude Include="BlackKnight.h" />
+    <ClInclude Include="BlackPawn.h" />
+    <ClInclude Include="BlackQueen.h" />
+    <ClInclude Include="BlackRook.h" />
     <ClInclude Include="common.h" />
+    <ClInclude Include="Empty.h" />
+    <ClInclude Include="Piece.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="WhiteBishop.h" />
+    <ClInclude Include="WhiteKing.h" />
+    <ClInclude Include="WhiteKnight.h" />
+    <ClInclude Include="WhitePawn.h" />
+    <ClInclude Include="WhiteQueen.h" />
+    <ClInclude Include="WhiteRook.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BlackBishop.cpp" />
+    <ClCompile Include="BlackKing.cpp" />
+    <ClCompile Include="BlackKnight.cpp" />
+    <ClCompile Include="BlackPawn.cpp" />
+    <ClCompile Include="BlackQueen.cpp" />
+    <ClCompile Include="BlackRook.cpp" />
     <ClCompile Include="common.cpp" />
+    <ClCompile Include="Empty.cpp" />
     <ClCompile Include="OpenCVApplication.cpp" />
+    <ClCompile Include="Piece.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="WhiteBishop.cpp" />
+    <ClCompile Include="WhiteKing.cpp" />
+    <ClCompile Include="WhiteKnight.cpp" />
+    <ClCompile Include="WhitePawn.cpp" />
+    <ClCompile Include="WhiteQueen.cpp" />
+    <ClCompile Include="WhiteRook.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
